2011-10-24  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt][WK2] Crash when running pixel tests
        https://bugs.webkit.org/show_bug.cgi?id=70725

        Reviewed by Chang Shu.

        * WebKitTestRunner/qt/TestInvocationQt.cpp:
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected):

2011-10-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove g_thread_init() calls
        https://bugs.webkit.org/show_bug.cgi?id=70717

        Reviewed by Xan Lopez.

        With newer glib it's not needed anymore and with previous versions
        it was already called by g_type_init().

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (main):
        * GtkLauncher/main.c:
        (main):
        * MiniBrowser/gtk/main.c:
        (main):

2011-10-24  Alejandro G. Castro  <alex@igalia.com>

        [WK2] [GTK] WebKitTestRunner crashes with heap corruption
        https://bugs.webkit.org/show_bug.cgi?id=69403

        We did not added autotoolsconfig.h to the config.h file and we
        were adding Platform.h without the config.h in the
        WebKitTestRunnerPrefix.h. Added the autotoolsconfig.h include in
        the Prefix file.

        Reviewed by Martin Robinson.

        * WebKitTestRunner/WebKitTestRunnerPrefix.h:

2011-10-23  Tomasz Morawski  <t.morawski@samsung.com>

        [EFL] Remove unused code from EWebLauncher
        https://bugs.webkit.org/show_bug.cgi?id=70590

        Reviewed by Andreas Kling.

        Removed unused function on_closeWindow from EWebLauncher

        * EWebLauncher/main.c:

2011-10-23  Luke Macpherson   <macpherson@chromium.org>

        Add watchlist for WebCore/css and put myself on it.
        https://bugs.webkit.org/show_bug.cgi?id=70701

        Reviewed by Adam Barth.

        * Scripts/webkitpy/common/config/watchlist:
        Add watchlist for WebCore/css and put myself on it.

2011-10-23  Kaustubh Atrawalkar  <kaustubh@motorola.com>
